--- a/src/style.css
+++ b/src/style.css
@@ -165,7 +165,15 @@ body {
   max-height: 100px;
 }
 
-.loaded .loading-box {
+.loading-box {
+  display: none;
+}
+
+.loading .loading-box {
+  display: block;
+}
+
+.loaded .loading-box, .loading .button-group, .loaded .button-group {
   display: none;
 }
 
@@ -212,4 +220,28 @@ body {
   transform: translateY(4px);
   border-bottom-width: 2px;
   box-shadow: none;
+}
+
+.button-group {
+  text-align: center;
+  margin-top: 60px;
+}
+.button {
+  border: 2px solid #437be8;
+  display: inline-block;
+  text-align: center;
+  line-height: 60px;
+  width: 200px;
+  height: 60px;
+  font-size: 18px;
+  border-radius: 4px;
+  transition: .6s;
+  overflow: hidden;
+  color: #437be8;
+  margin: 0 20px;
+}
+.button:hover {
+  background: #437be8;
+  color: #fff;
+  cursor: pointer;
 }
